# CMakeLearn

./: CMakeLists.txt  README.md  main.cpp  test.h
dll1/: CMakeLists.txt  dllheader.h  dllmain.cpp
exe1/: CMakeLists.txt  exemain.cpp
include/: cmndef.h
